# wasm_component_layer

./: .gitignore  Cargo.toml  README.md  output.out
examples/: func_param.rs  guest_resource.rs  multilevel_resource.rs  option_result.rs  resource.rs  single_component.rs  transfer.rs  value_none.rs
examples/func_param/: build.ps1  component.wasm  component.wat
examples/func_param/src/: lib.rs
examples/func_param/wit/: component.wit
examples/guest_resource/: Cargo.toml  README.md
examples/guest_resource/src/: bindings.rs  lib.rs
examples/guest_resource/wit/: world.wit
examples/multilevel_resource/: component.wasm
examples/multilevel_resource/src/: lib.rs
examples/multilevel_resource/wit/: component.wit
examples/option_result/: component.wasm  component.wat
examples/option_result/src/: lib.rs
examples/option_result/wit/: component.wit
examples/resource/: Cargo.toml  build.ps1  component.wasm
examples/resource/src/: lib.rs
examples/resource/wit/: component.wit
examples/single_component/: build.ps1  component.wasm
examples/single_component/src/: lib.rs
examples/single_component/wit/: component.wit
examples/transfer/: build.ps1  component.wasm
examples/transfer/inner/: Cargo.toml  build.ps1  component.wasm
examples/transfer/inner/src/: lib.rs
examples/transfer/outer/: Cargo.toml  build.ps1  component.wasm
examples/transfer/outer/src/: lib.rs
examples/transfer/wit/: component.wit
examples/value_none/: Cargo.toml  component.wasm  component.wat
examples/value_none/src/: lib.rs
examples/value_none/wit/: component.wit
src/: abi.rs  conv.rs  func.rs  identifier.rs  lib.rs  require_matches.rs  test_guest2.wasm  test_guest_combined.wasm  test_guest_compl_comp.wasm  test_guest_component.wasm  test_guest_component2.wasm  types.rs  values.rs
src/conv/: mod.rs  primitive.rs  primitive_impls.rs  value.rs
