[package]
name = "wasm_component_layer"
version = "0.1.7"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/DouglasDwyer/wasm_component_layer"
readme = "README.md"
description = """
WebAssembly component model implementation for any backend.
"""

[dependencies]
anyhow = "1.0.72"
bytemuck = { version = "1.13.1", features = [ "extern_crate_alloc" ] }
fxhash = "0.2.1"
id-arena = "2.2.1"
ref-cast = "1.0.19"
semver = "1.0.18"
slab = "0.4.9"
wasm_runtime_layer = "0.1.3"
wasmtime-environ = { version = "12.0.0", features = [ "component-model" ] }
wit-component = "0.14.0"
wit-parser = "0.11.0"

[dev-dependencies]
wasmi = "0.31.0"
wasm_runtime_layer = { version = "0.1.3", features = [ "backend_wasmi" ] }