[package]
name = "wasm_component_layer"
version = "0.1.8"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/DouglasDwyer/wasm_component_layer"
readme = "README.md"
description = """
WebAssembly component model implementation for any backend.
"""

[dependencies]
anyhow = { version = "1.0.72", default-features = false }
bytemuck = { version = "1.13.1", default-features = false, features = [ "extern_crate_alloc" ] }
fxhash = "0.2.1"
id-arena = { version = "2.2.1", default-features = false }
ref-cast = "1.0.19"
semver = { version = "1.0.18", default-features = false }
slab = { version = "0.4.9", default-features = false }
wasm_runtime_layer = "0.1.3"
wasmtime-environ = { version = "12.0.0", features = [ "component-model" ] }
wit-component = "0.14.0"
wit-parser = "0.11.0"

[dev-dependencies]
wasmi = "0.31.0"
wasm_runtime_layer = { version = "0.1.3", features = [ "backend_wasmi" ] }