[package]
name = "wasm_component_layer"
version = "0.1.16"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/DouglasDwyer/wasm_component_layer"
readme = "README.md"
description = """
WebAssembly component model implementation for any backend.
"""

[dependencies]
anyhow = { version = "1.0.75", default-features = false }
bytemuck = { version = "1.14.0", default-features = false, features = [ "extern_crate_alloc" ] }
fxhash = "0.2.1"
id-arena = { version = "2.2.1", default-features = false }
ref-cast = { version = "1.0.20", default-features = false }
semver = { version = "1.0.20", default-features = false }
serde = { version = "1.0.193", optional = true, default-features = false, features = [ "derive", "rc" ] }
slab = { version = "0.4.9", default-features = false }
wasm_runtime_layer = { version = ">=0.2.0", default-features = false }
wasmtime-environ = { version = ">=18.0.1", features = [ "component-model" ] }
wit-component = { version = ">=0.19.0,<=0.200.0", default-features = false }
wit-parser = { version = ">=0.13.0,<=0.200.0", default-features = false }

[features]
serde = [ "dep:serde", "semver/serde" ]

[dev-dependencies]
wasmi = "0.31.1"
wasm_runtime_layer = { version = "0.3.0", features = [ "backend_wasmi" ] }
