[package]
name = "guest_resource"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { version = "0.37.0" }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:guest-resource"

[package.metadata.component.dependencies]
